# AI-assistant

./: .gitignore  README.md  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
androidApp/src/main/kotlin/com/development/ai_assistant/: MainActivity.kt
androidApp/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts
shared/src/androidHostTest/kotlin/com/development/ai_assistant/: SharedLogicAndroidHostTest.kt
shared/src/androidMain/: AndroidManifest.xml
shared/src/androidMain/kotlin/com/development/ai_assistant/: Platform.android.kt
shared/src/androidMain/kotlin/com/development/ai_assistant/database/: DriverFactory.kt
shared/src/androidMain/kotlin/com/development/ai_assistant/di/: PlatformModule.kt
shared/src/androidMain/kotlin/com/development/ai_assistant/utils/: AndroidSTTManager.kt  AndroidTTSManager.kt
shared/src/commonMain/kotlin/com/development/ai_assistant/: App.kt  Greeting.kt  GreetingUtil.kt  Platform.kt
shared/src/commonMain/kotlin/com/development/ai_assistant/config/: LLMConfig.kt
shared/src/commonMain/kotlin/com/development/ai_assistant/di/: Koin.kt
shared/src/commonTest/kotlin/com/development/ai_assistant/: SharedCommonTest.kt
shared/src/iosMain/kotlin/com/development/ai_assistant/: MainViewController.kt  Platform.ios.kt
shared/src/iosTest/kotlin/com/development/ai_assistant/: SharedLogicIOSTest.kt
(+13 files in other folders)
